# pmem-bench

./: .clang-format  .gitignore  CMakeLists.txt  README.md  config.h.in
include/util/: cpuinfo.h  hardware_prefetch.h  mapping.h  pmem.h  uarch.h
script/: init_pmem.sh
test/: cpuinfo_test.c  hardware_prefetch_test.c  pmem_map_test.c  pmem_test.c
util/: cpuinfo.c  hardware_prefetch.c  map_mmap.c  map_pmem.c  mapping.c  pmem.c
